--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "be-park/socialite-azure-oauth",
+    "name": "annieneel/socialite-azure-oauth",
     "description": "Allow multi connection to azure AD using socialite of Laravel",
     "type": "library",
     "license": "MIT",
@@ -10,19 +10,18 @@
     },
     "authors": [
         {
-            "name": "Jérémy Dillenbourg",
-            "email": "jeremy@dillenbourg.be"
+            "name": "Annie Neel"
         }
     ],
     "autoload": {
         "psr-4": {
-            "Bepark\\SocialiteAzureOAuth\\": "src/"
+            "Annieneel\\SocialiteAzureOAuth\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Bepark\\SocialiteAzureOAuth\\AppServiceProvider"
+                "Annieneel\\SocialiteAzureOAuth\\AppServiceProvider"
             ]
         }
     }
